--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
     {
-        "name":"Alpha-Z Deploypack",
+        "name":"Petercord Deploypack",
         "description":"Userbot Plugins",
         "logo":"https://telegra.ph/file/b8c4935a277592df59ac9.jpg",
         "keywords":[
