--- a/app.json
+++ b/app.json
@@ -31,11 +31,11 @@
 		},
 		"BOT_TOKEN": {
 			"description": "Get this from https://t.me/botfather and enable Inline Mode. (ADD YOUR BOT IN LOG CHANNEL)",
-			"required": True
+			"required": true
 		},
 		"UPSTREAM_REPO": {
 			"description": "fill only if you maintain a fork !, else leave empty",
-			"required": True
+			"required": true
                         "https://github.com/ilham77mansiz/Petercord-Plugins"
 		},
 		"OWNER_ID": {
