--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
 		"UPSTREAM_REPO": {
 			"description": "fill only if you maintain a fork !, else leave empty",
 			"required": true
-                        "https://github.com/ilham77mansiz/Petercord-Plugins"
+                        "value": "https://github.com/ilham77mansiz/Petercord-Plugins"
 		},
 		"OWNER_ID": {
 			"description": "Your user_id(s) e.g 123456789 or mutiple ids",
