--- a/app.json
+++ b/app.json
@@ -35,7 +35,8 @@
 		},
 		"UPSTREAM_REPO": {
 			"description": "fill only if you maintain a fork !, else leave empty",
-			"required": false
+			"required": true
+                        "value": "https://github.com/ilham77mansiz/PETERCORD-AIRX"
 		},
 		"OWNER_ID": {
 			"description": "Your user_id(s) e.g 123456789 or mutiple ids",
