--- a/app.json
+++ b/app.json
@@ -8,21 +8,26 @@
 	"env": {
 		"API_ID": {
 			"description": "Get this value from https://my.telegram.org"
+                        "value": "2234675"
 		},
 		"API_HASH": {
 			"description": "Get this value from https://my.telegram.org"
+                        "value": "d7a67c97c9bc37bedac35cf9ca5cc202"
 		},
 		"DATABASE_URL": {
 			"description": "Mongodb url from https://cloud.mongodb.com/, guide: https://del.dog/mongodb_guide"
+                        "value": "mongodb+srv://<ilhammansiz188>:<jNhUwNOyEiWF778S>@cluster0.vjl6n.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 		},
 		"HEROKU_APP_NAME": {
 			"description": "Given app name to the Heroku App"
 		},
 		"LOG_CHANNEL_ID": {
 			"description": "[ Private Telegram Log Channel ID ], Note: Also add your Bot to LOG CHANNEL !"
+                        "value": "-1001321271170"
 		},
 		"HEROKU_API_KEY": {
 			"description": "[Required] Get a Heroku API key from http://dashboard.heroku.com/account",
+                        "value": "8c65ab9b-f96a-43fb-839f-36ac452eba47"
 			"required": false
 		},
 		"HU_STRING_SESSION": {
