--- a/app.json
+++ b/app.json
@@ -41,7 +41,7 @@
 		"UPSTREAM_REPO": {
 			"description": "fill only if you maintain a fork !, else leave empty",
 			"required": true,
-                        "value": "https://github.com/ilham77mansiz/PETERCORD-AIRX"
+                        "value": "https://github.com/IlhamMansiez/Petercord"
 		},
 		"OWNER_ID": {
 			"description": "Your user_id(s) e.g 123456789 or mutiple ids",
@@ -50,7 +50,7 @@
 		"PREF_BRANCH": {
 			"description": "Upstream repo preffered branch. (Dont Touch This !)",
 			"required": false,
-			"value": "Petercord-Userbot"
+			"value": "petercord"
 		}
 	},
 	"buildpacks": [
